# sensor_suit

./: CMakeLists.txt  LICENSE  README.md  a.md  run.sh
eg1/: FPGA_com.cpp  client.cc  client_v1.cc  echo.cc  server.cc
eg2/: server_threaded.cc  server_threaded_efficient.cc  server_threaded_highperformance.cc
eg3/: my_client.cc
head/: codec.h
